syntax="proto3";

option go_package="github.com/essayZW/hpcmanager/node/proto;node";

package node;

import "proto/ping.proto";
import "proto/common.proto";
import "gateway/proto/baserequest.proto";

service Node {
    rpc Ping(publicproto.Empty) returns (publicproto.PingResponse) {}
    rpc CreateNodeApply(CreateNodeApplyRequest) returns (CreateNodeApplyResponse) {}
}

message CreateNodeApplyRequest {
    request.BaseRequest baseRequest = 1;
    int32 projectID = 2;
    string nodeType = 3;
    int32 nodeNum = 4;
    int64 startTime = 5;
    int64 endTime = 6;
}

message CreateNodeApplyResponse {
   int32 id = 1;
}
